			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01an: *********************************

IMP: (11/12/04, SMR) Resizing a node lets you make it smaller without jumping corners.

IMP/MAN (11/12/04, JKG) Added command Tool->Network->List Total Wire Lengths on All Networks

IMP/MAN (11/12/04, JKG) Added command Tool->Logical Effort->Back Annotate Wire Lengths

IMP: (11/12/04, SMR) Solid opaque layers no longer obscure text.

BUG: (11/12/04, SMR) Deleting an export may delete the node.
FIX: Do not consider exports to be attached to nodes when deleting.

IMP: (11/12/04, SMR) Long network names are truncated in the "Arc Properties" dialog.

BUG: (11/11/04, GVG) List Geometry on Network: fast algorithm in PolyQTree not working correctly while splitting the tree. 
Fix: put back the slow code

IMP: (11/11/04, RK) Undebugged implementation of NCC net equivalence reporting

BUG: (11/11/04, SMR) Exports on expanded cell instances are not always drawn.
FIX: In PixelDrawing.drawNode(), draw exports when instances are cached.

************************* Version 8.01am: *********************************

BUG: (11/11/04, SMR) Arraying crashes.
FIX: Array.setNewName() ignores temporary names; Name constructor uses TextUtils.atoi instead of Integer.parseInt.

BUG: (11/11/04, SMR) Mirroring is broken.
FIX: In "Layout.java", fixed computation of new mirroring values.

IMP: (11/10/04, SMR) Added compaction.

IMP: (11/10/04, SMR) Added initial regression tests for I/O.

IMP: (11/10/04, SMR) Added Job.flushBatch() to reset constraints in the middle of a job.

BUG: (11/11/04, GVG) MinAre DRC didn't detect errors in subcells if nodes were not part of exports
FIX: Collect those nodes and check at the end.

BUG: (11/11/04, RK) NCC crashes when a Cell has an Export and global with the same name.

BUG: (11/11/04, DN) Exception in JELIB reader when referenced library not found.