@@ -80,6 +80,7 @@ public class SpiceTab extends PreferencePanel
 	private boolean spiceWriteTransSizesInLambdaInitial;
 	private double spiceTechMinResistanceInitial;
 	private double spiceTechMinCapacitanceInitial;
+    private double spiceGateLengthSubtractionInitial;
 	private String spiceHeaderCardInitial;
 	private String spiceTrailerCardInitial;
 	private HashMap spiceLayerResistanceOptions;
@@ -204,6 +205,9 @@ public class SpiceTab extends PreferencePanel
 
 		spiceTechMinCapacitanceInitial = curTech.getMinCapacitance();
 		spiceMinCapacitance.setText(Double.toString(spiceTechMinCapacitanceInitial));
+
+        spiceGateLengthSubtractionInitial = curTech.getGateLengthSubtraction();
+        spiceGateLengthSubtraction.setText(Double.toString(spiceGateLengthSubtractionInitial));
 
 		// the next section: header and trailer cards
 		spiceHeaderCardInitial = Simulation.getSpiceHeaderCardInfo();
@@ -454,6 +458,9 @@ public class SpiceTab extends PreferencePanel
 				layer.setEdgeCapacitance(edgeCapacitancePref.getDouble());
 		}
 
+        doubleNow = TextUtils.atof(spiceGateLengthSubtraction.getText());
+        if (spiceGateLengthSubtractionInitial != doubleNow) curTech.setGateLengthSubtraction(doubleNow);
+
 		// the next section: header and trailer cards
 		String header = "";
 		if (spiceHeaderCardsWithExtension.isSelected())
@@ -578,8 +585,7 @@ public class SpiceTab extends PreferencePanel
 	 * WARNING: Do NOT modify this code. The content of this method is
 	 * always regenerated by the Form Editor.
 	 */
-    private void initComponents()//GEN-BEGIN:initComponents
-    {
+    private void initComponents() {//GEN-BEGIN:initComponents
         java.awt.GridBagConstraints gridBagConstraints;
 
         spiceHeader = new javax.swing.ButtonGroup();
@@ -627,6 +633,8 @@ public class SpiceTab extends PreferencePanel
         spiceMinResistance = new javax.swing.JTextField();
         jLabel19 = new javax.swing.JLabel();
         spiceMinCapacitance = new javax.swing.JTextField();
+        jLabel4 = new javax.swing.JLabel();
+        spiceGateLengthSubtraction = new javax.swing.JTextField();
         jSeparator2 = new javax.swing.JSeparator();
         spice5 = new javax.swing.JPanel();
         spiceHeaderCardExtension = new javax.swing.JTextField();
@@ -655,10 +663,8 @@ public class SpiceTab extends PreferencePanel
 
         setTitle("Spice Preferences");
         setName("");
-        addWindowListener(new java.awt.event.WindowAdapter()
-        {
-            public void windowClosing(java.awt.event.WindowEvent evt)
-            {
+        addWindowListener(new java.awt.event.WindowAdapter() {
+            public void windowClosing(java.awt.event.WindowEvent evt) {
                 closeDialog(evt);
             }
         });
@@ -690,10 +696,8 @@ public class SpiceTab extends PreferencePanel
         gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
         spice1.add(jLabel10, gridBagConstraints);
 
-        spiceRunPopup.addActionListener(new java.awt.event.ActionListener()
-        {
-            public void actionPerformed(java.awt.event.ActionEvent evt)
-            {
+        spiceRunPopup.addActionListener(new java.awt.event.ActionListener() {
+            public void actionPerformed(java.awt.event.ActionEvent evt) {
                 spiceRunPopupActionPerformed(evt);
             }
         });
@@ -772,7 +776,7 @@ public class SpiceTab extends PreferencePanel
         spice2.setBorder(new javax.swing.border.EtchedBorder());
         spiceRunProgram.setColumns(8);
         spiceRunProgram.setMinimumSize(new java.awt.Dimension(100, 20));
-        spiceRunProgram.setPreferredSize(new java.awt.Dimension(70, 20));
+        spiceRunProgram.setPreferredSize(new java.awt.Dimension(92, 20));
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 1;
         gridBagConstraints.gridy = 2;
@@ -792,10 +796,8 @@ public class SpiceTab extends PreferencePanel
         spice2.add(jLabel17, gridBagConstraints);
 
         useDirCheckBox.setText("Use Dir:");
-        useDirCheckBox.addActionListener(new java.awt.event.ActionListener()
-        {
-            public void actionPerformed(java.awt.event.ActionEvent evt)
-            {
+        useDirCheckBox.addActionListener(new java.awt.event.ActionListener() {
+            public void actionPerformed(java.awt.event.ActionEvent evt) {
                 useDirCheckBoxActionPerformed(evt);
             }
         });
@@ -824,10 +826,8 @@ public class SpiceTab extends PreferencePanel
         spice2.add(overwriteOutputFile, gridBagConstraints);
 
         spiceRunHelp.setText("help");
-        spiceRunHelp.addActionListener(new java.awt.event.ActionListener()
-        {
-            public void actionPerformed(java.awt.event.ActionEvent evt)
-            {
+        spiceRunHelp.addActionListener(new java.awt.event.ActionListener() {
+            public void actionPerformed(java.awt.event.ActionEvent evt) {
                 spiceRunHelpActionPerformed(evt);
             }
         });
@@ -924,7 +924,7 @@ public class SpiceTab extends PreferencePanel
         gridBagConstraints.anchor = java.awt.GridBagConstraints.NORTH;
         spice4.add(jLabel7, gridBagConstraints);
 
-        jLabel2.setText("Edge Cap:");
+        jLabel2.setText("Perimeter Cap (fF/um):");
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 3;
         gridBagConstraints.gridy = 3;
@@ -938,7 +938,7 @@ public class SpiceTab extends PreferencePanel
         gridBagConstraints.anchor = java.awt.GridBagConstraints.EAST;
         spice4.add(jLabel11, gridBagConstraints);
 
-        jLabel12.setText("Capacitance:");
+        jLabel12.setText("Area Cap (fF/um^2):");
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 3;
         gridBagConstraints.gridy = 2;
@@ -993,7 +993,7 @@ public class SpiceTab extends PreferencePanel
         gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
         spice4.add(spiceMinResistance, gridBagConstraints);
 
-        jLabel19.setText("Min. Capacitance:");
+        jLabel19.setText("Min. Capacitance (fF):");
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 3;
         gridBagConstraints.gridy = 4;
@@ -1007,6 +1007,20 @@ public class SpiceTab extends PreferencePanel
         gridBagConstraints.fill = java.awt.GridBagConstraints.HORIZONTAL;
         gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
         spice4.add(spiceMinCapacitance, gridBagConstraints);
+
+        jLabel4.setText("Gate Length Shrink (Subtraction) um:");
+        gridBagConstraints = new java.awt.GridBagConstraints();
+        gridBagConstraints.gridx = 1;
+        gridBagConstraints.gridy = 5;
+        gridBagConstraints.gridwidth = 3;
+        gridBagConstraints.anchor = java.awt.GridBagConstraints.EAST;
+        spice4.add(jLabel4, gridBagConstraints);
+
+        gridBagConstraints = new java.awt.GridBagConstraints();
+        gridBagConstraints.gridx = 4;
+        gridBagConstraints.gridy = 5;
+        gridBagConstraints.fill = java.awt.GridBagConstraints.HORIZONTAL;
+        spice4.add(spiceGateLengthSubtraction, gridBagConstraints);
 
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
@@ -1269,6 +1283,7 @@ public class SpiceTab extends PreferencePanel
     private javax.swing.JLabel jLabel19;
     private javax.swing.JLabel jLabel2;
     private javax.swing.JLabel jLabel3;
+    private javax.swing.JLabel jLabel4;
     private javax.swing.JLabel jLabel7;
     private javax.swing.JLabel jLabel8;
     private javax.swing.JLabel jLabel9;
@@ -1292,6 +1307,7 @@ public class SpiceTab extends PreferencePanel
     private javax.swing.JTextField spiceEdgeCapacitance;
     private javax.swing.JComboBox spiceEnginePopup;
     private javax.swing.JCheckBox spiceForceGlobalPwrGnd;
+    private javax.swing.JTextField spiceGateLengthSubtraction;
     private javax.swing.ButtonGroup spiceHeader;
     private javax.swing.JTextField spiceHeaderCardExtension;
     private javax.swing.JTextField spiceHeaderCardFile;
